// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoCard renders grid type correctly 1`] = `
<li
  className=""
  onClick={[Function]}
>
  <img
    alt="title"
    className="w-full"
    src="http://image/"
  />
  <div>
    <h3
      className="font-semibold my-2 line-clamp-2"
    >
      title
    </h3>
    <h5
      className="text-sm opacity-80"
    >
      channelTitle
    </h5>
    <h5
      className="text-sm opacity-80"
    >
      방금
    </h5>
  </div>
</li>
`;

exports[`VideoCard renders list type correctly 1`] = `
<li
  className="flex gap-1 p-2"
  onClick={[Function]}
>
  <img
    alt="title"
    className="w-60 mr-2"
    src="http://image/"
  />
  <div>
    <h3
      className="font-semibold my-2 line-clamp-2"
    >
      title
    </h3>
    <h5
      className="text-sm opacity-80"
    >
      channelTitle
    </h5>
    <h5
      className="text-sm opacity-80"
    >
      방금
    </h5>
  </div>
</li>
`;
